Sat Dec 14 00:34:31 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* internal.h (ruby_sized_xrealloc2): fix typo introduced in r44117,
	  which cause compile error on Solaris.

Sat Dec 14 00:22:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c: (exec_recursive): use rb_catch_protect() instead of
	  rb_catch_obj() and PUSH_TAG(), and reduce pushing tags and
	  machine stack usage.

Sat Dec 14 00:18:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): achieve the original defined_class from
	  prepended iclass, to fix inherited owner.

	* proc.c (method_owner): return the defined class, but not the
	  class which the method object is created from.

Fri Dec 13 22:29:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_owner): return the class where alias is defined, not
	  the class original method is defined.

	* vm_method.c (rb_method_entry_make, rb_alias): store the originally
	  defined class in me.  [Bug #7993] [Bug #7842] [Bug #9236]

	* vm_method.c (rb_method_entry_get_without_cache): cache included
	  module but not iclass.

Fri Dec 13 16:27:17 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_info_decode): Use :major_by=>:nofree as fallback reason
	  when other trigger conditions are present.

Fri Dec 13 13:25:30 2013  Koichi Sasada  <ko1@atdot.net>

	* error.c: add Exception#backtrace_locations.
	  Now, there are no setter and independent from Exception#backtrace.
	  [Feature #8960]

	* eval.c (setup_exception): set backtrace locations for `bt_location'
	  special attribute.

	* vm_backtrace.c (rb_backtrace_to_location_ary): added.

	* internal.h: ditto.

	* test/ruby/test_backtrace.rb: add a test for
	  Exception#backtrace_locations.

Fri Dec 13 12:01:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): use rb_bug() and explicit error message
	  instead of using assert().
	  [Bug #9222]

Fri Dec 13 11:52:41 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: fix comment to remove the word "shady".
